--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <nav>
       <div class="tabp">
         <div class="tab-container">
-          <a class="tab" href="/WEB%202/porto.html">Profil</a>
-          <a class="tab" href="/WEB%202/pengalaman.html">Pengalaman</a>
-          <a class="tab" href="/WEB 2/minat.html">Minat</a>
+          <a class="tab" href="/index.html">Profil</a>
+          <a class="tab" href="/pengalaman.html">Pengalaman</a>
+          <a class="tab" href="/minat.html">Minat</a>
         </div>
       </div>
     </nav>
